--- a/l/lo/loc/locanto.ie.html
+++ b/l/lo/loc/locanto.ie.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the locanto.ie privacy policy that was archived on 2013-05-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130501061233id_/http%3A//www.locanto.ie/info/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the locanto.ie privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215103611id_/http%3A//www.locanto.ie/info/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><!--<![endif]--><head>
 		<meta charset="UTF-8">
@@ -11,6 +11,7 @@
 		<meta name="keywords" content="">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		
+		<meta http-equiv="content-language" content="en_ie">
 		<meta name="robots" content="noindex,noarchive">
 		<meta name="googlebot" content="noindex,noarchive">
 		<meta name="slurp" content="noindex,noarchive">
@@ -18,35 +19,37 @@
 		<link rel="shortcut icon" href="http://static.locanto.ie/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="http://static.locanto.ie/favicon.ico" type="image/x-icon">
 		<link rel="canonical" href="http://www.locanto.ie/info/privacy/">
-		<link rel="stylesheet" href="http://static.locanto.ie/styles/13450_0426/main_locanto.css" type="text/css">
-		<link rel="stylesheet" href="http://static.locanto.ie/styles/13450_0426/sprites_div_locanto.css" type="text/css">
-		<link rel="stylesheet" href="http://static.locanto.ie/styles/13450_0426/sprites_flags.css" type="text/css">
-		<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script type="text/javascript" src="http://static.locanto.ie/js/13450_0426/basics.js"></script>
-		<script type="text/javascript">
-// <![CDATA[
-var myUrl = "http://www.locanto.ie/info/privacy/"
-// ]]>
-		</script>
+		<link rel="stylesheet" href="http://static.locanto.ie/styles/19169_0213/main_locanto.css" type="text/css">
+		<link rel="stylesheet" href="http://static.locanto.ie/styles/19169_0213/sprites_div_locanto.css" type="text/css">
+		<link rel="stylesheet" href="http://static.locanto.ie/styles/19169_0213/sprites_flags.css" type="text/css">
+		<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script>var yalwa = yalwa || { };yalwa.v = yalwa.v || { };yalwa.v.upid_key = 'locanto';yalwa.v.is_mobile = false;yalwa.v.price_format = '#,##0.00';yalwa.v.muscula_logID = '';yalwa.v.markerSrc = 'http://static.locanto.ie/images/19169_0213/32/pin_red.png';</script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script src="http://static.locanto.ie/js/19169_0213/basics.js"></script>
+		<script>var myUrl = "http://www.locanto.ie/info/privacy/"</script>
 <!--[if lte IE 8]>
-		<link rel="stylesheet" href="http://static.locanto.ie/styles/13450_0426/common_msie.css">
+		<link rel="stylesheet" href="http://static.locanto.ie/styles/19169_0213/common_msie.css">
 <![endif]-->
-		<link rel="apple-touch-icon" href="http://static.locanto.ie/images/13450_0426/locanto_iphone_old.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="http://static.locanto.ie/images/13450_0426/locanto_ipad.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="http://static.locanto.ie/images/13450_0426/locanto_iphone.png">
+		<link rel="apple-touch-icon" href="http://static.locanto.ie/images/19169_0213/locanto_iphone_old.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="http://static.locanto.ie/images/19169_0213/locanto_ipad.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="http://static.locanto.ie/images/19169_0213/locanto_iphone.png">
 		<meta name="viewport" content="width=1024">
 
-<script type="text/javascript">
-// <![CDATA[
-var as_tracking_code = "";
+<script>var as_tracking_code = "";
 var _gaq = _gaq || [];
 _gaq.push(
 	['_setAccount', 'UA-785042-27'],
-	['_setSiteSpeedSampleRate', '10'],
+	['_setCustomVar', 1, 'full vs mobile', 'full', 3],
+	['_setCustomVar', 2, 'level', 'global', 3],
+	['_setCustomVar', 3, 'pagetype', 'INFO', 3],
+	['_setCustomVar', 4, 'locale', 'global', 3],
+	['_setSiteSpeedSampleRate', 10],
 	['_trackPageview'],
 	['b._setAccount', 'UA-16149668-1'],
-	['b._trackPageview']
-);
+	['b._setCustomVar', 1, 'full vs mobile', 'full', 3],
+	['b._setCustomVar', 2, 'level', 'global', 3],
+	['b._setCustomVar', 3, 'pagetype', 'INFO', 3],
+	['b._setCustomVar', 4, 'locale', '39-global', 3],
+	['b._trackPageview']);
 (function() {
     var ga = document.createElement('script');
     ga.type = 'text/javascript';
@@ -55,13 +58,16 @@ _gaq.push(
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(ga, s);
 })();
-// ]]>
 </script>
 
+
 		<style type="text/css">
+		#h1_container {
+			left: 210px;
+		}
 		#logo_link > div {
-			background:url(http://static.locanto.ie/images/13450_0426/logo/Locanto_200_hover_english.png) 0 0 no-repeat;
-			width:170px;
+			background:url(http://static.locanto.ie/images/19169_0213/logo/Locanto_200_hover_english_39.png) 0 0 no-repeat;
+			width:200px;
 			height:70px
 		}
 		#logo_link:hover > div {
@@ -72,23 +78,26 @@ _gaq.push(
 	<body onload="setupLogin();" lang="en" itemscope="" itemtype="http://schema.org/WebPage">
 		<div id="main" class="infopage">
 
-			<meta itemscope="" itemprop="inLanguage" content="en">
+			<meta itemprop="inLanguage" content="en">
 
-			<div id="header" itemscope="" itemtype="http://schema.org/Type" itemid="http://schema.org/WPHeader">
+			<div id="header">
 				<div id="h1_container">
 						<h1>Free Classifieds</h1>
 							</div>
 
-				<div itemscope="" itemtype="http://schema.org/Brand">
-					<div id="logo" itemscope="" itemtype="http://schema.org/ImageObject" itemprop="logo">
-								<a id="logo_link" itemprop="url" href="http://www.locanto.ie/">
-											<div title="Free Classifieds Ireland"></div>
-										</a>
+				<div itemscope="" itemtype="http://schema.org/LocalBusiness" itemprop="provider">
+					<div itemscope="" itemtype="http://schema.org/Brand" itemprop="brand">
+						<div id="logo" itemscope="" itemtype="http://schema.org/ImageObject" itemprop="logo">
+								<a id="logo_link" href="http://www.locanto.ie/">
+										<div title="Free Classifieds Ireland"></div>
+								<link itemprop="contentUrl" href="http://static.locanto.ie/images/19169_0213/logo/Locanto_200_39.png">
+									</a>
 							</div>
-					<div style="display:none" itemprop="name">Locanto</div>
+						<meta itemprop="name" content="Locanto">
+					</div>
+					<meta itemprop="name" content="Yalwa GmbH">
 				</div>
 			</div>
-
 	
 <div id="middle">
 <div id="middle" style="padding:10px;">
@@ -191,12 +200,12 @@ _gaq.push(
 		
 		<li>       
 		       &nbsp;<h3>Responsible authority</h3>
-			<p>Questions regarding data privacy and protection should be addressed to <span id="my246233902">Sorry, you need JavaScript ON to see the email address (spam protection).</span>
+			<p>Questions regarding data privacy and protection should be addressed to <span id="my1822233247"><a href="mailto:privacy@locanto.ie">privacy@locanto.ie</a></span>
 <script type="text/javascript">
 // <![CDATA[
 {
-coded = "VsUt7kT@abk71Kb.U6"
-key = "ltMCjfg9nU2ATFIQ3xaKJ8eY0R1Lc4SBphGP7qOr6EoXNvkDm5VuziHwysdWbZ"
+coded = "eyqNItl@sLtIiZL.q0"
+key = "nZFrvRxS4b25EGLCauiK8yNpDYgcwBTdhWIPq6klVefXmtj7QAHU3OJ9zso01M"
 shift = coded.length
 link = ""
 for (i = 0; i < coded.length; i++) {
@@ -208,7 +217,7 @@ for (i = 0; i < coded.length; i++) {
 		link += (key.charAt(ltr))
 	}
 }
-T$("my246233902").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
+document.getElementById("my1822233247").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 }
 //]]>
 </script></p>
@@ -216,13 +225,12 @@ T$("my246233902").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 </ol></div>
 </div><br style="clear:both;">
 <!-- google_ad_section_start(weight=ignore) -->
-				<div id="top" itemscope="" itemtype="http://schema.org/Type" itemid="http://schema.org/SiteNavigationElement">
-	
+				<div id="top" itemscope="" itemtype="http://schema.org/SiteNavigationElement">
+				
 	
 	<!-- google_ad_section_start(weight=ignore) -->
 		<div id="divider"></div>
 		<div class="topnav">
-
 
 			<div style="clear:both;"></div>
 		</div>
@@ -230,7 +238,7 @@ T$("my246233902").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 
 			</div>
 	
-			<div id="bottom" itemscope="" itemtype="http://schema.org/Type" itemid="http://schema.org/WPFooter">
+			<div id="bottom" itemscope="" itemtype="http://schema.org/WPFooter">
 
 
 
@@ -248,6 +256,9 @@ T$("my246233902").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 			<a href="http://www.locanto.info/safer_trading/blog/" target="_blank">Safety tips</a>
 		</li>
 						<li>
+			<a rel="nofollow" target="_blank" href="http://www.locanto.info/classifieds/about/">About Locanto</a>
+		</li>
+				<li>
 			<a rel="nofollow" href="http://www.locanto.ie/run/faq_contact/" target="_blank">Contact</a>
 		</li>
 		</ul>
@@ -265,8 +276,26 @@ T$("my246233902").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 			<a rel="nofollow" href="http://www.locanto.ie/info/s/iphone-app.html">iPhone App</a>
 		</li>
 	
+			<li>
+			<a rel="nofollow" target="_blank" href="https://play.google.com/store/apps/details?id=de.locanto.app&amp;hl=en">Android App</a>
+		</li>
+	
+			<li>
+			<a rel="nofollow" href="https://www.locanto.com/info/api/?cid=39">Locanto API</a>
+		</li>
+	
+			<li>
+			<a rel="nofollow" href="http://www.locanto.ie/info/partner/">Partner with Locanto</a>
+		</li>
 	
 	
+			<li>
+			<a rel="nofollow" href="http://www.locanto.ie/info/s/advertise.html">Advertise on Locanto</a>
+		</li>
+	
+			<li>
+			<a href="http://www.locanto.ie/post/">Post Ad</a>
+		</li>
 		</ul>
 
 
@@ -293,9 +322,9 @@ T$("my246233902").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 				<br>
 
 				<ul>
-					<li>Copyright © 2013 Locanto™</li>
+					<li>Copyright © 2014 Locanto™</li>
 						</ul>
-				<div class="fo" style="display:none">&nbsp;&nbsp;<i>sun4</i></div>
+				<div class="fo" style="display:none">&nbsp;&nbsp;<i>sun3</i></div>
 			</div>
 
 
@@ -303,16 +332,9 @@ T$("my246233902").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 
 	</div>
 
-	<script type="text/javascript">
-// <![CDATA[
-	var yalwa = yalwa || new Object();
-	yalwa.v = yalwa.v || new Object();
-	yalwa.v.upid_key = 'locanto';
-				yalwa.v.price_format = '#,##0.00';
-	// ]]>
-	</script>
-	<script type="text/javascript" src="http://static.locanto.ie/js/13450_0426/setup_favs/"></script>
-	<script type="text/javascript" src="http://static.locanto.ie/js/13450_0426/setup_login/?aid="></script>
+	
+<script src="http://static.locanto.ie/js/19169_0213/setup_favs/"></script>
+<script src="http://static.locanto.ie/js/19169_0213/setup_login/?aid="></script>
 
 
 
