--- a/p/po/por/pornper.com.html
+++ b/p/po/por/pornper.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pornper.com privacy policy that was archived on 2013-08-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130823072743id_/http%3A//www.pornper.com/static/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pornper.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215105318id_/http%3A//www.pornper.com/static/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -32,7 +32,7 @@
 </script>
     <script type="text/javascript" src="http://img.fastcdn.me/js/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="http://img.fastcdn.me/js/jquery.livequery.pack.js"></script>
-    <script type="text/javascript" src="http://img.fastcdn.me/js/jquery.rotator-0.2.js"></script>
+    <script type="text/javascript" src="http://img.fastcdn.me/js/jquery.rotator-0.2.1.js"></script>
     <script type="text/javascript" src="http://img.fastcdn.me/js/jquery.avs-0.2.js?v=1.1.1"></script>
     	<script type="text/javascript" src="http://img.fastcdn.me/js/login.js?v1.1.8"></script>
 </head>
@@ -235,42 +235,20 @@ alt="website statistics"></a></div></noscript>
 
 
 <script type="text/javascript" src="http://img.fastcdn.me/js/pp.v1.0.8.js"></script>
-<script type="text/javascript" src="http://img.fastcdn.me/js/ppjw.v1.0.1.js"></script>
+<script type="text/javascript" src="http://img.fastcdn.me/js/ppjw.v1.0.6.js"></script>
 <script type="text/javascript">
-function getCookie(c) {
-	var cookies=document.cookie.split(';');
-	for(var i=0;i<cookies.length;i++) {
-		var key=cookies[i].substr(0,cookies[i].indexOf("="));
-		var val=cookies[i].substr(cookies[i].indexOf("=")+1);
-		key=key.replace(/^\s+|\s+$/g,"");
-		if(key==c)
-			return unescape(val);
-	}
-	return null;
-}
-
-//var scr1='<scr'+'ipt type="text/javascr'+'ipt" src="http://st2.pornper.com/js/pvx_data.js"></scr'+'ipt><scr'+'ipt type="text/javascr'+'ipt">if(typeof(pvx)!="undefined"&&typeof(pvx.cc)!="undefined"&&typeof(window["infinity_url_"+pvx.cc])!="undefined") inifinity_url=window["infinity_url_"+pvx.cc]; else inifinity_url=infinity_url;</scr'+'ipt>'+'<scr'+'ipt type="text/javascr'+'ipt" src="http://img.fastcdn.me/js/pvx/pvx.js"></scr'+'ipt>';
-var scr1='<scr'+'ipt type="text/javascr'+'ipt" src="http://st2.pornper.com/js/inx.js"></scr'+'ipt>';
-var scr2='<scr'+'ipt type="text/javascr'+'ipt">juicy_code=\'44d4u2u2r256v2r2x28423\';</scr'+'ipt><scr'+'ipt type="text/javascr'+'ipt" src="http://ads.juicyads.com/jsclients/jac.js" charset="utf-8"></scr'+'ipt>';
-
-if(getCookie('juicy-js-cookie')==null&&getCookie('infPopCookieCap')==null)
-{
-	if(Math.floor((Math.random()*2))==1)
-		document.write(scr2);
-	else document.write(scr1);
-}
-else if(getCookie('juicy-js-cookie')==null)
-	document.write(scr2);
-else if(getCookie('infPopCookieCap')==null)
-	document.write(scr1);
-else {}
-
-</script><script type="text/javascript" src="http://st2.pornper.com/js/inx.js"></script>
 
 
-<!-- 
-<script type='text/javascript' src='http://ads.adxpansion.com/public/js/showads.php?zone_id=39936&ver=1&type=imbox'></script>
- -->
+
+
+
+</script>
+
+
+
+
+<script type="text/javascript" src="http://st2.pornper.com/js/snpp.js"></script>
+<script type="text/javascript" src="http://img.fastcdn.me/js/snpp/snpp.v.1.0.10.js"></script>
 
 <script type="text/javascript" src="http://admez.com/ads/pornper.js"></script>
 
