--- a/e/ew/ewe/ewedding.com.html
+++ b/e/ew/ewe/ewedding.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ewedding.com privacy policy that was archived on 2013-08-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130811061633id_/http%3A//www.ewedding.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ewedding.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215110442id_/http%3A//www.ewedding.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -84,8 +84,11 @@
 
 						<div class="content_side">
 							<blockquote>
-	<p class="quote"></p><div class="image_rr"><img src="../img/review/chrisandjulie.jpg" alt="" width="100" height="100"></div>As someone who does web design for a living this is by far the perfect solution to not only organizing your wedding for your guest but also sharing your story.<p></p>
-	<p class="names">Julie &amp; Christopher<br>Atlanta, Georgia</p>
+	<p class="quote"></p><div class="image_rr"><img src="../img/review/adrianandkathleen.jpg" alt="" width="100" height="100"></div>My fiance &amp; I along with our guest totally love our website. We started to create our website to share the news of our engagement to our family and friends and to add on more information as we furthered our planning for our wedding especially since we work in Alaska but are orginally from California. <br>
+<br>
+Just months into our engagement, our website was a big hit and recieved many positive compliments from family and friends. Plus having our own domain name and being able to put it on all our wedding related supplies such as invitation was something that showed we were up to date with technology.<br>
+<p></p>
+	<p class="names">Kathleen and Adrian<br>AK, USA</p>
 </blockquote>
 <p><br><a href="/setup/signup.php">Start your free wedding website</a></p>
 
@@ -129,7 +132,7 @@
 		<li class="last"><a href="/contact.php">Contact us</a></li>
 	</ul>
 
-	<p>© 2013 eWedding.com. All Rights Reserved<a class="none" href="/recent.php">.</a></p>	
+	<p>© 2014 eWedding.com. All Rights Reserved<a class="none" href="/recent.php">.</a></p>	
 
 </div>
 <script type="text/javascript">
@@ -141,6 +144,7 @@ var pageTracker = _gat._getTracker("UA-561819-1");
 pageTracker._initData();
 pageTracker._trackPageview();
 </script>
+
 		</div><!-- main wrapper -->
 
 		<script type="text/javascript">
