--- a/b/bt/btc/btcjam.com.html
+++ b/b/bt/btc/btcjam.com.html
@@ -1,18 +1,19 @@
-<!--The following is the downloaded HTML source of the btcjam.com privacy policy that was archived on 2013-04-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130425193400id_/https%3A//btcjam.com/legal/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the btcjam.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215112123id_/https%3A//btcjam.com/legal/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8">
-<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://widget.uservoice.com/gAkNrDtp2ljlBuIG02b4iQ.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=221212544578208"></script><script type="text/javascript" async="" src="https://d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/tytgwn1sox/analytics.min.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
 <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-<title>Privacy Policy - BTCJAM</title>
+<title>Privacy Policy - BTCJam</title>
 <meta content="Peer to Peer Bitcoin Lending, Lend and borrow bitcoins. Borrowers get great rates. Investors get great returns." name="description">
 <meta content="Celso" name="author">
-<link href="/assets/application-1cf96e7ec751236664b7453ff33103e3.css" media="all" rel="stylesheet" type="text/css">
-<script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://widget.uservoice.com/gAkNrDtp2ljlBuIG02b4iQ.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=221212544578208"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/assets/application-95e70d85c8973da2607e0e863fc307a6.js" type="text/javascript"></script>
+<link href="/assets/application-05dea46928610b632618e4fda4b2b0b1.css" media="all" rel="stylesheet" type="text/css">
+<script src="/assets/application-53fa98792c78ced0af3f36454076712d.js" type="text/javascript"></script>
 <meta content="authenticity_token" name="csrf-param">
-<meta content="r/0lQlZp8Uz+pSLYreBft/v6ewmF9K++FS6Y0h/xz0o=" name="csrf-token">
+<meta content="/KRGSF3qZJmuFuBdAjjAGUrGUpmf9nZzHaNwt6vDYTU=" name="csrf-token">
 
+<script src="//cdn.optimizely.com/js/571091630.js"></script>
 <script>
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-34687829-1']);
@@ -24,8 +25,13 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
-<script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script></head>
-<body>
+<script>
+  window.analytics||(window.analytics=[]),window.analytics.methods=["identify","track","trackLink","trackForm","trackClick","trackSubmit","page","pageview","ab","alias","ready","group","on","once","off"],window.analytics.factory=function(t){return function(){var a=Array.prototype.slice.call(arguments);return a.unshift(t),window.analytics.push(a),window.analytics}};for(var i=0;i<window.analytics.methods.length;i++){var method=window.analytics.methods[i];window.analytics[method]=window.analytics.factory(method)}window.analytics.load=function(t){var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"===document.location.protocol?"https://":"http://")+"d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n)},window.analytics.SNIPPET_VERSION="2.0.8",
+  window.analytics.load("tytgwn1sox");
+  window.analytics.page();
+</script>
+</head>
+<body style="">
 <div id="fb-root"></div>
 <script>
   (function(d, s, id) {
@@ -37,12 +43,15 @@
   }(document, 'script', 'facebook-jssdk'));
 </script>
 <header class="navbar navbar-fixed-top">
-<nav class="navbar-inner">
+<div class="navbar-inner">
 <div class="container">
-<div class="content">
-<div class="row">
-<div class="span12">
+<button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" style="margin-top:45px;margin-right:20px;border-color:white" type="button">
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
 <a href="/" class="brand"> </a>
+<div class="nav-collapse collapse">
 <ul class="nav pull-right navitens">
 <li class="dropdown">
 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -52,7 +61,7 @@ Invest
 <ul class="dropdown-menu">
 <li><a href="/invest/overview">Overview</a></li>
 <li><a href="/listings">Browse Listings</a></li>
-<li><a href="/invest/overview">Create Automated Plan</a></li>
+<li><a href="/securities">Investment Plans</a></li>
 </ul>
 </li>
 <li class="dropdown">
@@ -70,6 +79,16 @@ Borrow
 <li>
 <a href="/how_it_works/overview">How It Works</a>
 </li>
+<li class="dropdown">
+<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+About
+<br class="caret">
+</a>
+<ul class="dropdown-menu">
+<li><a href="/contact">About Us</a></li>
+<li><a href="http://blog.btcjam.com" target="_blank">Blog</a></li>
+</ul>
+</li>
 <li>
 <a href="/users/sign_in">Log in</a>
 </li>
@@ -81,14 +100,12 @@ Borrow
 </div>
 </div>
 </div>
-</div>
-</nav>
 </header>
 <div class="main" id="main" role="main">
 <div class="container">
 <div class="content">
 <div class="row">
-<div class="span11 offset1">
+<div class="span12">
 
 
 <div class="row">
@@ -167,6 +184,13 @@ We are committed to conducting our business in accordance with these principles 
 </div>
 <footer>
 <div class="footer">
+<div class="row">
+<div class="span2">
+<a href="https://mixpanel.com/f/partner">
+<img alt="Mobile Analytics" src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png">
+</a>
+</div>
+<div class="span10">
 <a href="/legal/privacy_policy">Privacy Policy</a>
 |
 <a href="/legal/tos">Terms of Use</a>
@@ -175,14 +199,22 @@ We are committed to conducting our business in accordance with these principles 
 |
 <a href="/legal/rules_for_lenders">Rules for Lenders</a>
 |
+<a href="/faq">FAQ</a>
+|
 <a href="/contact">Contact Us</a>
 |
 <a href="/contact">About Us</a>
+|
+<a href="http://blog.btcjam.com">Blog</a>
 <p>Copyright © 2012 Ovo Cósmico LTDA.</p>
+</div>
+</div>
 </div>
 
 </footer>
 <script>
+  
+  
   
   var uvOptions = {};
   (function() {
@@ -190,8 +222,7 @@ We are committed to conducting our business in accordance with these principles 
     uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/gAkNrDtp2ljlBuIG02b4iQ.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
   })();
-</script>
-<script>
+  
   var _qevents = _qevents || [];
   
   (function() {
@@ -207,22 +238,17 @@ We are committed to conducting our business in accordance with these principles 
   qacct:"p-Jp1ARsHqpCzy3"
   });
 </script>
-<noscript>
-<div style='display:none;'>
-<img alt='Quantcast' border='0' height='1' src='//pixel.quantserve.com/pixel/p-Jp1ARsHqpCzy3.gif' width='1'>
-</div>
-</noscript>
-<script type="text/javascript">if (!NREUMQ.f) { NREUMQ.f=function() {
+<script type="text/javascript">if (typeof NREUMQ !== "undefined") { if (!NREUMQ.f) { NREUMQ.f=function() {
 NREUMQ.push(["load",new Date().getTime()]);
 var e=document.createElement("script");
 e.type="text/javascript";
 e.src=(("http:"===document.location.protocol)?"http:":"https:") + "//" +
-  "d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js";
+  "js-agent.newrelic.com/nr-100.js";
 document.body.appendChild(e);
 if(NREUMQ.a)NREUMQ.a();
 };
 NREUMQ.a=window.onload;window.onload=NREUMQ.f;
 };
-NREUMQ.push(["nrfj","beacon-3.newrelic.com","dd72fc2c18","1754602","d1gIERFfVV4HRBgPA1NWCkoTQlBEA1VOPBZbWw8GGg==",0,403,new Date().getTime(),"","","","",""]);</script>
+NREUMQ.push(["nrfj","beacon-5.newrelic.com","dd72fc2c18","1754602","d1gIERFfVV4HRBgPA1NWCkoTQlBEA1VOPBZbWw8GGg==",0,15,new Date().getTime(),"","","","",""]);}</script>
 
-<script type="text/javascript" src="https://d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js"></script></body></html>
+<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
