--- a/r/re/red/redlobster.com.html
+++ b/r/re/red/redlobster.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the redlobster.com privacy policy that was archived on 2013-10-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131002205432id_/https%3A//redlobster.com/legal/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the redlobster.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215114950id_/http%3A//www.redlobster.com/legal/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -13,7 +13,7 @@
 <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=8" /><![endif]-->
 <meta name="og:title" content="Red Lobster Seafood Restaurants">
 <meta name="og:description" content="Here's everything from Red Lobster restaurant menus to locations and prepaid gift cards and recipes - all online and easy to find.">
-<meta name="og:image" content="http://redlobster.com/assets/images/design/rl_logo.png">
+<meta name="og:image" content="http://www.redlobster.com/assets/images/design/rl_logo.png">
 <!-- ICONS -->
 <link rel="shortcut icon" type="image/ico" href="/assets/images/favicon.ico">
 
