--- a/f/fi/fit/fitclick.com.html
+++ b/f/fi/fit/fitclick.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the fitclick.com privacy policy that was archived on 2013-08-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130809143920id_/http%3A//www.fitclick.com/www/misc/Privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fitclick.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215121411id_/http%3A//www.fitclick.com/www/misc/Privacy.aspx) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" class=" js no-mobile desktop no-ie web-section web-20130809143920id_-section web-20130809143920id_-http%3a-section web-20130809143920id_-http%3a--section web-20130809143920id_-http%3a--www.fitclick.com-section web-20130809143920id_-http%3a--www.fitclick.com-www-section web-20130809143920id_-http%3a--www.fitclick.com-www-misc-section w-1366 gt-240 gt-320 gt-480 gt-640 gt-768 gt-800 gt-1024 gt-1280 lt-1440 lt-1680 lt-1920 no-portrait landscape gradient rgba opacity textshadow multiplebgs boxshadow borderimage borderradius cssreflections csstransforms csstransitions no-touch no-retina fontface domloaded" id="privacy-page"><head><link rel="stylesheet" type="text/css" href="/www/tf/styles/baAch/Styles.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" class=" js no-mobile desktop no-ie web-section web-20140215121411id_-section web-20140215121411id_-http%3a-section web-20140215121411id_-http%3a--section web-20140215121411id_-http%3a--www.fitclick.com-section web-20140215121411id_-http%3a--www.fitclick.com-www-section web-20140215121411id_-http%3a--www.fitclick.com-www-misc-section w-1366 gt-240 gt-320 gt-480 gt-640 gt-768 gt-800 gt-1024 gt-1280 lt-1440 lt-1680 lt-1920 no-portrait landscape gradient rgba opacity textshadow multiplebgs boxshadow borderimage borderradius cssreflections csstransforms csstransitions no-touch no-retina fontface domloaded" id="privacy-page"><head><link rel="stylesheet" type="text/css" href="/www/tf/styles/baAch/Styles.css">
 <title>
 	Privacy policy | FitClick
 </title><link rel="shortcut icon" href="/img/tf/icons/favicon.ico?c=4">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Open+Sans+Condensed:700">
-<script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript">
+<script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript">
 var googletag = googletag || {};
 googletag.cmd = googletag.cmd || [];
 (function(){
@@ -24,7 +24,7 @@ googletag.cmd.push(function(){
 googletag.defineSlot('/4119227/FitClick_Run-of-Site_Med_Rect_Top_Right',[300,250],'ad1_uxGooglePublisherTag_uxAd').addService(googletag.pubads());
 googletag.defineSlot('/4119227/FitClick_Run_of_Site_Top_Leaderboard',[728,90],'ctl03_ctl03_uxGooglePublisherTag_uxAd').addService(googletag.pubads());
 googletag.defineSlot('/4119227/FitClick_Run_of_Site_Bottom_Leaderboard',[728,90],'ctl07_uxExplorePanel_ctl00_uxGooglePublisherTag_uxAd').addService(googletag.pubads());
-googletag.pubads().set('page_url', 'http://www.fitclick.com/www/misc/privacy.aspx');
+googletag.pubads().set('page_url', 'http://www.fitclick.com/www/misc/Privacy.aspx');
 googletag.enableServices();
 });
 function googletagPeriodicRefresh(googletag){
@@ -76,6 +76,17 @@ head.js({'jquery':'https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min
 			<div class="HeaderStage">
 				<div class="HeaderStageOverlay">
 					<a class="HeaderLogo" href="http://www.fitclick.com/" title="Calorie Counter, Diet Plans &amp; Weight Loss Programs"></a>
+					<div class="HeaderSocial">
+						<iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FFitClick&amp;width=450&amp;height=21&amp;colorscheme=light&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;send=false&amp;appId=56782854705" scrolling="no" frameborder="0" style="height:20px;width:90px;" allowtransparency="true"></iframe>
+						<div class="g-plusone" data-size="medium" data-href="https://plus.google.com/b/105291861965914970144/105291861965914970144"></div>
+						<script type="text/javascript">
+							(function () {
+								var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+								po.src = 'https://apis.google.com/js/plusone.js';
+								var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+							})();
+						</script>
+					</div>
 					<div class="HeaderContent">
 						
 
@@ -139,7 +150,7 @@ head.js({'jquery':'https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min
 			<ul>
 				<li><a href="/fitness_weight_loss_challenge">Challenges</a></li>
 				<li><a href="/www/Challenges/Pages/ChallengeCreate.aspx">Create Challenge</a></li>
-				<li><a href="/www/Challenges/Pages/TeamList.aspx">Teams</a></li>
+				<li><a href="/free_weight_loss_groups">Teams</a></li>
 			</ul>
 		</li>
 		<li>
@@ -150,7 +161,7 @@ head.js({'jquery':'https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min
 				<li><a href="/free_weight_loss_information">Message Boards</a></li>
 				<li><a href="/free_fitness_articles">Articles</a></li>
 				<li><a href="/online_weight_loss_support">People</a></li>
-				<li><a href="/www/Challenges/Pages/TeamList.aspx">Teams</a></li>
+				<li><a href="/free_weight_loss_groups">Teams</a></li>
 				<li><a href="/www/community/media/MediaList.aspx">Media</a></li>
 				<li><a href="/weight_loss_points_leaderboard">Points Leaderboard</a></li>
 			</ul>
@@ -163,6 +174,7 @@ head.js({'jquery':'https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min
 				<li><a href="/weight_loss_support_motivation">Weight Loss Support</a></li>
 				<li><a href="/how_to_lose_weight">How to Lose Weight</a></li>
 				<li><a href="/how_to_lose_fat">How to Lose Fat</a></li>
+				<li><a href="/newsletter_archive">Newsletter Archive</a></li>
 			</ul>
 		</li>
 		<li>
@@ -205,6 +217,8 @@ head.js({'jquery':'https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min
 				<div id="MainStage">
     <div id="content">
 
+				
+<div class="pageTitle" style="padding-bottom: 6px; margin-bottom: 12px;"><h1><strong>PRIVACY POLICY</strong></h1></div>
 
 <div class="bigTxt">Privacy Policy</div>
 <style type="text/css">
@@ -347,11 +361,32 @@ As we grow and offer you new service features, we will continually evaluate this
 
 
 
+
+<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5227a0322b7098bb"></script>
+<script type="text/javascript">	addthis.layers({theme: 'gray'});</script>
+
   <div class="AllClear"></div>
   </div>
   
   </div>
   </div>
+  <div id="ctl07_ctl01_uxContainer">
+	
+	<div class="addthis_buttons">
+		<div class="addthis_buttons_inner">
+			<p class="alternate-heading space-bottom-small">Follow Us</p>
+			<div class="addthis_toolbox addthis_32x32_style addthis_default_style space-bottom-small">
+				<a class="addthis_button_facebook_follow" addthis:userid="FitClick"></a>
+				<a class="addthis_button_twitter_follow" addthis:userid="FitClick"></a>
+				<a class="addthis_button_google_follow" addthis:userid="105291861965914970144"></a>
+				<a class="addthis_button_pinterest_follow" addthis:userid="fitclick"></a>
+			</div>
+			<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5227a0322b7098bb"></script>
+		</div>
+	</div>
+
+</div>
   <div id="ctl07_uxExplorePanel_uxContainer">
 	
     <div id="explore-wrapper">
@@ -538,10 +573,11 @@ As we grow and offer you new service features, we will continually evaluate this
       <div id="FooterNav">
         <div class="ui-list ui-list-items ui-list-collapse ui-list-align ui-list-loose">
           <a class="ui-list-item" href="http://www.fitclick.com/www/xnt/tf/pages/AboutUs.aspx">About Us</a>
+          <a class="ui-list-item" href="http://www.fitclick.com/www/xnt/tf/pages/Help.aspx">Help</a>
 					<a class="ui-list-item" href="/www/misc/AdvertiseOn.aspx">Advertise on FitClick</a>
 				</div>
       </div>
-      <p id="FooterCopyright"><br>Copyright © 2013 Genesant Technologies, Inc. Use of this site constitutes acceptance of our <a href="/www/misc/Terms.aspx" rel="nofollow">terms and conditions</a> and <a id="link-terms2" href="/www/misc/Privacy.aspx" rel="nofollow">privacy policy</a>. The content provided on FitClick.com is provided for informational purposes only and is not intended in any way to be a substitute for professional medical advice, diagnosis or treatment.</p>
+      <p id="FooterCopyright"><br>Copyright © 2014 Genesant Technologies, Inc. Use of this site constitutes acceptance of our <a href="/www/misc/Terms.aspx" rel="nofollow">terms and conditions</a> and <a id="link-terms2" href="/www/misc/Privacy.aspx" rel="nofollow">privacy policy</a>. The content provided on FitClick.com is provided for informational purposes only and is not intended in any way to be a substitute for professional medical advice, diagnosis or treatment.</p>
     </div>
   </div>
 	
@@ -584,7 +620,9 @@ As we grow and offer you new service features, we will continually evaluate this
 </noscript>
 
 
-<script type="text/javascript" src="https://as.ebz.io/api/choixPubJS.htm?pid=303905&amp;screenLayer=1&amp;mode=NONE&amp;home=http://www.fitclick.com"></script><script language="javascript" async="async" src="/www/common/client_scripts/popup.js?v=1" type="text/javascript"></script>
+<script type="text/javascript" src="https://as.ebz.io/api/choixPubJS.htm?pid=303905&amp;screenLayer=1&amp;mode=NONE&amp;home=http://www.fitclick.com"></script>
+
+<script type="text/javascript" src="//footer.monetizemore.com/fitclick.com.js"></script><script language="javascript" async="async" src="/www/common/client_scripts/popup.js?v=1" type="text/javascript"></script>
 
 
 
